# Data-Exchange-API

./: .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
benchmark/: cyberwater_bench.py  plot.py
src/: data_classes.py
src/clients/cyberwater/: high_level_api.py  low_level_api.py
src/clients/cyberwater/lib/: high_level_api.py  low_level_api.py
src/clients/e3sm/: high_level_api.f90  low_level_c_api.c  low_level_fortran_interface.f90
src/server/: exchange_server.py
tests/: tests.py
tests/cyberwater/: cyberwater_test1.py  cyberwater_test2.py  test.py
tests/e3sm/: e3sm_test1.f90  e3sm_test2.f90  e3sm_test3.f90
tests/ex0/cyberwater/: cyberwater_test.py
tests/ex1/cyberwater/: cyberwater_test.py
tests/ex2/cyberwater/: cyberwater_test.py
tests/ex2/e3sm/: e3sm_test
