[tool.poetry]
name = "data-exchange-service-for-computational-model-integrations-between-different-platforms"
version = "0.1.0"
description = "This repository contains the codebase for a data exchange service designed to facilitate communication between the Earth System Model (E3SM) and the Cyberwater client. It also includes a Python-based middleman server to manage the data exchange."
authors = ["Seth Wolfgang <wolfgangseth@gmail.com>",        
            "Ayush Manojkumar Lodha",
            "Yao Liang",
            "Xu Liang",
            "Feng Dongyu",
            "Fengguang Song"]
readme = "README.md"

packages = [
    { include = "cyberwater" , from = "src/clients/" },
    { include = "server" , from = "src/" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = ">=3.9.13.1"
fastapi = "0.110.1"
uvicorn = "0.29.0"
pydantic = "2.7.0"
numpy = "1.22.0"
httpx = "0.27.2"
pytest = "7.4.2"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
